refactor to headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,30 @@ project(Memo)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(LIB_SOURCE_FILES main.cpp)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
-add_library(libmemo ${LIB_SOURCE_FILES})
+set(LIB_SOURCE_FILES
+    src/memories.cpp
+    src/repetitions.cpp
+    src/search.cpp
+    src/string_utils.cpp
+    src/utils.cpp
+    src/vocablurary.cpp
+)
 
-set(EXEC_SOURCE_FILES main.cpp)
+add_library(libmemo STATIC ${LIB_SOURCE_FILES})
+set(EXEC_SOURCE_FILES
+    main.cpp
+)
 
 add_executable(memo ${EXEC_SOURCE_FILES})
+
 target_link_libraries(memo libmemo)
+
+set_target_properties(memo PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+)
+
+set_target_properties(libmemo PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
+)
